--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
 	},
 	"dependencies": {
 		"@eva-design/eva": "^2.2.0",
+		"@react-navigation/native": "^6.1.9",
+		"@react-navigation/native-stack": "^6.9.17",
+		"@react-navigation/stack": "^6.3.20",
 		"@ui-kitten/components": "^5.3.1",
 		"@ui-kitten/eva-icons": "^5.3.1",
 		"react": "18.2.0",
 		"react-native": "0.73.2",
+		"react-native-feather": "^1.1.2",
+		"react-native-gesture-handler": "^2.14.1",
+		"react-native-safe-area-context": "^4.8.2",
+		"react-native-screens": "^3.29.0",
 		"react-native-svg": "^14.1.0"
 	},
 	"devDependencies": {
