--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
 	},
 	"dependencies": {
 		"@eva-design/eva": "^2.2.0",
+		"@hookform/resolvers": "^3.3.4",
 		"@react-navigation/native": "^6.1.9",
 		"@react-navigation/native-stack": "^6.9.17",
 		"@react-navigation/stack": "^6.3.20",
 		"@ui-kitten/components": "^5.3.1",
 		"@ui-kitten/eva-icons": "^5.3.1",
+		"axios": "^1.6.7",
 		"react": "18.2.0",
+		"react-hook-form": "^7.49.3",
 		"react-native": "0.73.2",
 		"react-native-feather": "^1.1.2",
 		"react-native-gesture-handler": "^2.14.1",
 		"react-native-safe-area-context": "^4.8.2",
 		"react-native-screens": "^3.29.0",
-		"react-native-svg": "^14.1.0"
+		"react-native-svg": "^14.1.0",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
@@ -39,6 +43,7 @@
 		"eslint": "^8.19.0",
 		"jest": "^29.6.3",
 		"prettier": "2.8.8",
+		"react-native-dotenv": "^3.4.9",
 		"react-test-renderer": "18.2.0",
 		"typescript": "5.0.4"
 	},
