--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react-native": "0.73.2",
 		"react-native-feather": "^1.1.2",
 		"react-native-gesture-handler": "^2.14.1",
+		"react-native-mmkv-storage": "^0.9.1",
 		"react-native-safe-area-context": "^4.8.2",
 		"react-native-screens": "^3.29.0",
 		"react-native-svg": "^14.1.0",
