--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
 	"dependencies": {
 		"@eva-design/eva": "^2.2.0",
 		"@hookform/resolvers": "^3.3.4",
+		"@react-navigation/bottom-tabs": "^6.5.11",
 		"@react-navigation/native": "^6.1.9",
 		"@react-navigation/native-stack": "^6.9.17",
 		"@react-navigation/stack": "^6.3.20",
+		"@tanstack/react-query": "^5.17.19",
 		"@ui-kitten/components": "^5.3.1",
 		"@ui-kitten/eva-icons": "^5.3.1",
 		"axios": "^1.6.7",
