--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
 		"@react-navigation/native": "^6.1.9",
 		"@react-navigation/native-stack": "^6.9.17",
 		"@react-navigation/stack": "^6.3.20",
+		"@shopify/flash-list": "^1.6.3",
 		"@tanstack/react-query": "^5.17.19",
 		"@ui-kitten/components": "^5.3.1",
 		"@ui-kitten/eva-icons": "^5.3.1",
 		"axios": "^1.6.7",
+		"date-fns": "^3.3.1",
 		"react": "18.2.0",
 		"react-hook-form": "^7.49.3",
 		"react-native": "0.73.2",
