--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"android": "react-native run-android",
 		"ios": "react-native run-ios",
 		"lint": "eslint .",
+		"compile": "tsc --noEmit",
 		"start": "react-native start",
 		"test": "jest"
 	},
@@ -41,15 +42,20 @@
 		"@react-native/eslint-config": "0.73.2",
 		"@react-native/metro-config": "0.73.3",
 		"@react-native/typescript-config": "0.73.1",
+		"@testing-library/jest-native": "^5.4.3",
+		"@testing-library/react-native": "^12.4.3",
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
+		"@types/jest": "^29.5.11",
 		"@types/react": "^18.2.6",
 		"@types/react-test-renderer": "^18.0.0",
 		"babel-jest": "^29.6.3",
 		"eslint": "^8.19.0",
 		"jest": "^29.6.3",
+		"metro-react-native-babel-preset": "^0.77.0",
 		"prettier": "2.8.8",
 		"react-native-dotenv": "^3.4.9",
 		"react-test-renderer": "18.2.0",
+		"ts-jest": "^29.1.2",
 		"typescript": "5.0.4"
 	},
 	"engines": {
