Adds test step to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,3 +25,6 @@ jobs:
 
             - name: Compile
               run: npm run compile
+
+            - name: Test
+              run: npm run test
