--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@types/react-test-renderer": "^18.0.0",
 		"babel-jest": "^29.6.3",
 		"eslint": "^8.19.0",
+		"eslint-config-prettier": "^9.1.0",
 		"jest": "^29.6.3",
 		"metro-react-native-babel-preset": "^0.77.0",
 		"prettier": "2.8.8",
